tests/tests/neg/error_messages/wf/sort_inference.rs
#[flux::refined_by(hrn p: int -> bool)]
struct S;

#[flux::sig(fn(S[|a: bool| a]))] //~ ERROR mismatched sorts
fn test01(x: S) {}
